Added more functionality to the interface

--- a/gui/package.json
+++ b/gui/package.json
@@ -20,6 +20,7 @@
     "electron": "^11.3.0"
   },
   "dependencies": {
-    "python-shell": "^1.0.8"
+    "python-shell": "^1.0.8",
+    "jquery": "3.5.1"
   }
 }
