--- a/gui/package.json
+++ b/gui/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "electron-quick-start",
+  "name": "speed-cam",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager . MyApp"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -20,7 +21,8 @@
     "electron": "^11.3.0"
   },
   "dependencies": {
-    "python-shell": "^1.0.8",
-    "jquery": "3.5.1"
+    "electron-packager": "^15.2.0",
+    "jquery": "3.5.1",
+    "python-shell": "^1.0.8"
   }
 }
