--- a/gui/package.json
+++ b/gui/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . MyApp"
+    "build": "electron-packager . MyApp --platform=win32"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
